[package]
name = "object_test"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
linera-sdk = "0.11.3"
serde = "1.0.203"

[dev-dependencies]
linera-sdk = { version = "0.11.3", features = ["test"] }

[[bin]]
name = "object_test_contract"
path = "src/contract.rs"

[[bin]]
name = "object_test_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
